2004-08-31  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* Makefile.am: Only put pkgsrc dir in SUBDIRS if we should install
	  rc.d files.  (Note that pkgsrc is always in DIST_SUBDIRS.)

	* configure.ac (pkgsrcdir): add new --enable-pkgsrcrcdir to give a
	  directory into which www.pkgsrc.org-style rc.d files are
	  installed.

2004-08-19 Paul Jakma <paul@dishone.st>

	* Makefile.am: add m4 directory to EXTRA_DIST, and define 
	  ACLOCAL_AMFLAGS to have aclocal pull in m4/
	* configure.ac: AM_PROG_LIBTOOL should be AC_...
	* update-autotools: print a warning that this script is deprecated  
	
2004-08-17  Greg Troxel  <gdt@fnord.ir.bbn.com>

	* update-autotools: print tools versions to aid people in sending
	bug reports.

2004-07-23  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* */Makefile.am: Use ../dir/libfoo.la, rather than "-L../dir
	-lfoo", to avoid linking against installed libraries from a
	previous version.

	* {lib,ospfd,ospfclient}/Makefile.am: explicitly define the shared
	library version number to be 0.0

	* configure.ac: remove spurious , so extract.pl is chmod'd +x.
	
	* HACKING: explain shared library versioning rules
	
2004-07-22 Paul Jakma <paul@dishone.st>

	* configure.ac: modify default CFLAGS to be compiler agnostic
	  build Makefile for tests/ subdir.
	  
2004-07-14  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* Makefile.am (EXTRA_DIST): Add missing \, so tools stuff is
	really in distfile.

2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* */Makefile.am: use -L../lib -lzebra, so we pick up the shlib
	version of libzebra when available.

	* configure.ac, update-autotools: Add libtool.

2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>

	* Makefile.am: add files to EXTRA_DIST rather than copying, and
	omit the kludgy cleaning steps, which were failing when the list
	to clean was empty.

2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>
	
	* configure.ac: Look for perl, and substitute into vtysh/extract.pl.